syntax = "proto3";

package hsmq.v1.hsmq;

import "google/protobuf/any.proto";

message Message {
    google.protobuf.Any data = 1;
    string topic = 2;
    string key = 3;
    map<string, string> headers = 4;
}

message PublishResponse {
    oneof kind {
        int64 count = 1;
        MessageMeta message_meta = 2;
        Redirect redirect = 3;
    }
}

message Redirect {
    string grpc_uri = 1;
}

message SubscribeQueueRequest {
    repeated string queues = 1;
}

message SubscriptionResponse {
    oneof kind {
        Message message = 1;
        Redirect redirect = 2;
    }
}

message SubscribeQueue {
    repeated string queues = 1;
    int32 prefetch_count = 2;
}

message MessageMeta {
    string id = 1;
    string queue = 2;
    string shard = 3;
}

message MessageWithMeta {
    Message message = 1;
    MessageMeta meta = 2;
}

message MessageAck {
    MessageMeta meta = 1;
}

message MessageRequeue {
    MessageMeta meta = 1;
}

message PublishMessage {
    Message message = 1;
    uint32 qos = 2;
}

message PubAck {
}

message FetchMessage {
    string queue = 1;
    float timeout = 2;
}

message FetchMessageTimeout {
    string queue = 1;
}

message Request {
    oneof kind {
        SubscribeQueue subscribe_queue = 1;
        MessageAck message_ack = 2;
        MessageRequeue message_requeue = 3;
        PublishMessage publish_message = 4;
        FetchMessage fetch_message = 5;
    }
}

message Response {
    oneof kind {
        MessageWithMeta message = 1;
        Redirect redirect = 2;
        PubAck pub_ack = 3;
        FetchMessageTimeout fetch_message_timeout = 4;
    }
}

service HSMQ {
    rpc Publish (Message) returns (PublishResponse) {}
    rpc PublishQos0 (stream Message) returns (PublishResponse) {}
    rpc SubscribeQueue (SubscribeQueueRequest) returns (stream SubscriptionResponse) {}
    rpc Streaming (stream Request) returns (stream Response) {}
}
